--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
+      env:
+        CI: false
+        REACT_APP_TOKEN: ${{ vars.REACT_APP_TOKEN }}
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
