--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,10 +23,9 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       env:
-        CI: false
         REACT_APP_TOKEN: ${{ vars.REACT_APP_TOKEN }}
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: npm run build --if-present
+    - run: CI='' npm run build
