--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  REACT_APP_TOKEN: ${{ secrets.REACT_APP_TOKEN }}
+  
 jobs:
   build:
 
@@ -22,10 +25,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
-      env:
-        REACT_APP_TOKEN: ${{ vars.REACT_APP_TOKEN }}
+     
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
     - run: CI='' npm run build
+    - run: systemctl restart nginx
