--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-horizontal-scrolling-menu": "^7.0.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
