fix: BlogSlider migrated to API routes.

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "fast-xml-parser": "^4.4.1",
     "framer-motion": "^11.3.8",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-awesome-reveal": "^4.2.13",
     "react-dom": "^18",
