--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@next/third-parties": "^14.2.5",
     "fast-xml-parser": "^4.4.1",
     "framer-motion": "^11.3.8",
     "next": "14.2.5",
